<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/big_padding"
    android:orientation="vertical"
    tools:context=".EditTaskActivity">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TXT_debug_title"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|textAutoCorrect|textNoSuggestions"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/TXT_debug_info"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="120dp" />

    <RadioGroup
        android:id="@+id/edit_task_status_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:layoutMode="clipBounds"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_status_not_started"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/TXT_status_not_started" />

        <RadioButton
            android:id="@+id/edit_status_ongoing"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/TXT_status_ongoing"
            android:textColor="@color/blue" />

        <RadioButton
            android:id="@+id/edit_status_completed"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/TXT_status_completed"
            android:textColor="@color/green" />

    </RadioGroup>

    <TextView
        android:id="@+id/edit_time"
        style="@style/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="20dp"
        android:text="@string/TXT_debug_time"
        app:autoSizeMaxTextSize="12sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1px" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_button_new_task_acitivty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_save_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TXT_btn_save"
            android:textColor="@color/buttonLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.120000005" />

        <Button
            android:id="@+id/button_cancel_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TXT_button_cancel"
            android:textColor="@color/buttonLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/button_delete_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TXT_button_delete"
            android:textColor="@color/buttonLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>