<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_item"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="50dp"
    android:animateLayoutChanges="true"
    android:animationCache="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_cardview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:autoSizeTextType="uniform"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/TXT_debug_title"
                android:textAlignment="center"
                android:textAppearance="@style/large"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeStepGranularity="1px"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/TXT_debug_title" />

            <TextView
                android:id="@+id/item_info"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_margin="@dimen/text_margin"
                android:textAlignment="textStart"
                android:textAppearance="@style/normal"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1px"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:text="@string/TXT_debug_info" />

            <TextView
                android:id="@+id/item_status"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:textAlignment="center"
                android:textAppearance="@style/small"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.85"
                tools:text="@string/TXT_debug_status" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:textAlignment="center"
                android:textAppearance="@style/small"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95"
                tools:text="@string/TXT_debug_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>